shits still broken

--- a/admin_panel/latex_templates/ferpa_template.tex
+++ b/admin_panel/latex_templates/ferpa_template.tex
@@ -1,115 +1,55 @@
 \documentclass[12pt]{article}
-
 \usepackage[a4paper,margin=0.75in]{geometry}
 \usepackage{graphicx}
-\usepackage{amssymb}    % for $\square$
+\usepackage{amssymb}
 \usepackage{xcolor}
 \usepackage{framed}
-\setlength{\parindent}{0pt} % Disable paragraph indentation
+\setlength{\parindent}{0pt}
 
 \begin{document}
 
-% --------------------------------------------------------------
-% Title / Header
-% --------------------------------------------------------------
 \begin{center}
-    {\Large \textbf{AFFIDAVIT}}\\
-    \textbf{STATE OF TEXAS}\\
-    \small Texas Residency Verification
+    {\Large \textbf{FERPA AUTHORIZATION FORM}}
 \end{center}
 
 \vspace{1em}
 
-\noindent \textbf{COUNTY OF} \underline{\textbf{{{{ county }}}}}
+\textbf{Student Name:} \underline{<< student_name >>} \\
+\textbf{University Division:} \underline{<< university_division >>} \\
+\textbf{PeopleSoft ID:} \underline{<< peoplesoft_id >>}
 
 \vspace{1em}
 
-Before me, the undersigned Notary Public, on this day personally appeared
-\underline{\textbf{{{{ appeared_name }}}}}, known to me, who being by me duly sworn upon his/her oath, deposed and said:
+\textbf{Offices or Individuals to Release To:} \\
+<< offices >>
 
 \vspace{1em}
 
-% --------------------------------------------------------------
-% Personal Info
-% --------------------------------------------------------------
-1. My name is \underline{\textbf{{{{ full_name }}}}}. I am \underline{\textbf{{{{ age }}}}} years of age and have personal knowledge of the facts stated herein and they are all true and correct.
+\textbf{Categories of Information:} \\
+<< info_categories >>
 
 \vspace{1em}
 
-% --------------------------------------------------------------
-% Checkboxes
-% --------------------------------------------------------------
-{{ '% if graduated_check %' }}
-$\boxtimes$
-{{ '% else %' }}
-$\square$
-{{ '% endif %' }}
-I graduated or will graduate from a Texas high school or received my GED certificate in Texas.
-
-\vspace{0.5em}
-{{ '% if resided_check %' }}
-$\boxtimes$
-{{ '% else %' }}
-$\square$
-{{ '% endif %' }}
-I resided in Texas for three years leading up to graduation from high school or receiving my GED certificate.
-
-\vspace{0.5em}
-$\square$ I have resided or will have resided in Texas for the 12 months prior to the census date of the semester in which I will enroll in \underline{\textbf{{{{ college_name }}}}} (name of college).
-
-\vspace{0.5em}
-{{ '% if permanent_resident_check %' }}
-$\boxtimes$
-{{ '% else %' }}
-$\square$
-{{ '% endif %' }}
-I have filed or will file an application to become a permanent resident at the earliest opportunity that I am eligible to do so.
+\textbf{Release To (Name of individual or entity):} \\
+<< release_to >>
 
 \vspace{1em}
 
-% --------------------------------------------------------------
-% Date Section
-% --------------------------------------------------------------
-In witness whereof, this \underline{\textbf{{{{ day }}}}} day of
-\underline{\textbf{{{{ month }}}}}, \underline{\textbf{{{{ year }}}}}.
+\textbf{Additional Individuals:} \\
+<< additional_individuals >>
 
 \vspace{1em}
 
-% --------------------------------------------------------------
-% Signature / ID / DOB
-% --------------------------------------------------------------
-Signature: \underline{\textbf{{{{ signature }}}}} \\
-Student ID Number: \underline{\textbf{{{{ student_id }}}}} \\
-Student Date of Birth: \underline{\textbf{{{{ dob }}}}}
-
-\vspace{2em}
-
-% --------------------------------------------------------------
-% Notary Section
-% --------------------------------------------------------------
-\begin{center}
-\fbox{\begin{minipage}{0.9\linewidth}
-    \textbf{NOTARY SECTION}
-
-    \vspace{0.8em}
-    \textbf{SUBSCRIBED TO AND SWORN TO BEFORE ME}, on the
-    \underline{\textbf{{{{ notary_day }}}}} day of \underline{\textbf{{{{ notary_month }}}}}, 
-    \underline{\textbf{{{{ notary_year }}}}}, to certify which witness my hand and official seal.
-
-    \vspace{1em}
-    Notary Name: \underline{\textbf{{{{ notary_name }}}}} \\
-    \textit{Notary Public in and for the State of Texas}
-\end{minipage}}
-\end{center}
+\textbf{Purpose of Release:} \\
+<< purposes >>
 
 \vspace{1em}
 
-% --------------------------------------------------------------
-% Footer
-% --------------------------------------------------------------
-\textit{Please Retain a Copy for your Records}\\
-\textit{Submit to Registrar's Office}\\
-Texas Residency Affidavit Form\\
-Page 1 of 1
+\textbf{Password:} \underline{<< password >>}
+
+\vspace{1em}
+
+\textbf{Date:} \underline{<< form_date >>} \\
+\textbf{Student Signature:} \underline{<< signature >>}
 
 \end{document}
