correct ferpa form

--- a/admin_panel/latex_templates/ferpa_template.tex
+++ b/admin_panel/latex_templates/ferpa_template.tex
@@ -1,55 +1,67 @@
 \documentclass[12pt]{article}
 \usepackage[a4paper,margin=0.75in]{geometry}
-\usepackage{graphicx}
-\usepackage{amssymb}
-\usepackage{xcolor}
-\usepackage{framed}
-\setlength{\parindent}{0pt}
+\usepackage{amssymb} % For checkboxes
+
+\setlength{\parindent}{0pt} % Disable paragraph indentation
 
 \begin{document}
 
+\noindent \textbf{Form No. OGC-SF-2006-02} % Bold at top left
+
 \begin{center}
-    {\Large \textbf{FERPA AUTHORIZATION FORM}}
+    {\fontsize{11pt}{13pt} \selectfont \textbf{AUTHORIZATION TO RELEASE EDUCATIONAL RECORDS}}\\
+    {\fontsize{11pt}{13pt} \selectfont \textbf{Family Educational Rights and Privacy Act of 1974 as Amended (FERPA)}}
 \end{center}
 
-\vspace{1em}
+I \underline{<< student_name >>} hereby voluntarily authorize officials in the\\
+\hspace{2cm} [Print Name of Student] \\
 
-\textbf{Student Name:} \underline{<< student_name >>} \\
-\textbf{University Division:} \underline{<< university_division >>} \\
-\textbf{PeopleSoft ID:} \underline{<< peoplesoft_id >>}
+University of Houston - \underline{<< university_division >>} identified below to disclose personally identifiable information from my educational records.
 
-\vspace{1em}
+\textbf{(Please check the box or boxes that apply):}
+\begin{list}{}{\leftmargin=0pt \itemindent=0pt \setlength{\itemsep}{0pt}}
+    << offices >>
+\end{list}
 
-\textbf{Offices or Individuals to Release To:} \\
-<< offices >>
+\textbf{Specifically, I authorize disclosure of the following information or category of information.}\\
+\textbf{(Please check the box or boxes that apply):}
+\begin{list}{}{\leftmargin=0pt \itemindent=0pt \setlength{\itemsep}{0pt}}
+    << info_categories >>
+\end{list}
 
-\vspace{1em}
+\textbf{This information may be released to:} \underline{<< release_to >>}\\
+[Print Name(s) of Individual(s) To Whom University May Disclose Information]
 
-\textbf{Categories of Information:} \\
-<< info_categories >>
+\underline{<< additional_individuals >>} for the purpose of informing:\\
+[List Additional Individuals if Necessary]
 
-\vspace{1em}
+\textbf{(Please check the box or boxes that apply):}
+\begin{list}{}{\leftmargin=0pt \itemindent=0pt \setlength{\itemsep}{0pt}}
+    << purposes >>
+\end{list}
 
-\textbf{Release To (Name of individual or entity):} \\
-<< release_to >>
+\textbf{Please provide a password to obtain information via the phone:} \underline{<< password >>}\\
+\footnotesize (Password should not contain more than ten (10) letters. The University will not release information to the caller if they do not have the password. A new form must be completed to change your password.)
 
-\vspace{1em}
+\vspace{0.3cm}
+\textbf{This is to attest that I am the student signing this form.} I understand the information may be released orally or in the form of copies of written records, as preferred by the requester. This authorization will remain in effect from the date it is executed until revoked by me, in writing, and delivered to Department(s) identified above.
 
-\textbf{Additional Individuals:} \\
-<< additional_individuals >>
+\vspace{0.6cm}
+\underline{<< peoplesoft_id >>}\\
+PeopleSoft I.D. Number
 
-\vspace{1em}
+\vspace{0.3cm}
+\underline{<< student_name >>} \hspace{0.5cm} \underline{<< signature >>}\\
+Student Name [please print] \hspace{2cm} Student Signature
 
-\textbf{Purpose of Release:} \\
-<< purposes >>
+\vspace{0.6cm}
+\textbf{Please Retain a Copy for your Records}\\
+\textbf{Document may be Submitted to Registrar’s Office}\\
+FERPA Authorization Form OGC-SF-2006-02\\
+Revised 11.10.2022\\
+Page 1 of 1
 
-\vspace{1em}
-
-\textbf{Password:} \underline{<< password >>}
-
-\vspace{1em}
-
-\textbf{Date:} \underline{<< form_date >>} \\
-\textbf{Student Signature:} \underline{<< signature >>}
+\vfill
+\hfill \textbf{Note: Modification of this Form requires approval of OGC}
 
 \end{document}
