HOLY SHIT FERPA WORKS KINDA

--- a/admin_panel/latex_templates/ferpa_template.tex
+++ b/admin_panel/latex_templates/ferpa_template.tex
@@ -1,57 +1,59 @@
 \documentclass[12pt]{article}
 \usepackage[a4paper,margin=0.75in]{geometry}
 \usepackage{amssymb} % For checkboxes
+\usepackage{graphicx} % For signature image
 
 \setlength{\parindent}{0pt} % Disable paragraph indentation
 
 \begin{document}
 
-\noindent \textbf{Form No. OGC-SF-2006-02} % Bold at top left
+\noindent \textbf{Form No. OGC-SF-2006-02}
 
 \begin{center}
     {\fontsize{11pt}{13pt} \selectfont \textbf{AUTHORIZATION TO RELEASE EDUCATIONAL RECORDS}}\\
     {\fontsize{11pt}{13pt} \selectfont \textbf{Family Educational Rights and Privacy Act of 1974 as Amended (FERPA)}}
 \end{center}
 
-I \underline{<< student_name >>} hereby voluntarily authorize officials in the\\
-\hspace{2cm} [Print Name of Student] \\
+I \underline{\textbf{<<student_name>>}} hereby voluntarily authorize officials in the\\
+\textbf{Print Name of Student} \\
 
-University of Houston - \underline{<< university_division >>} identified below to disclose personally identifiable information from my educational records.
+University of Houston - \underline{\textbf{<<university_division>>}} identified below to disclose personally identifiable information from my educational records.
 
 \textbf{(Please check the box or boxes that apply):}
 \begin{list}{}{\leftmargin=0pt \itemindent=0pt \setlength{\itemsep}{0pt}}
-    << offices >>
+    <<offices>>
 \end{list}
 
 \textbf{Specifically, I authorize disclosure of the following information or category of information.}\\
 \textbf{(Please check the box or boxes that apply):}
 \begin{list}{}{\leftmargin=0pt \itemindent=0pt \setlength{\itemsep}{0pt}}
-    << info_categories >>
+    <<info_categories>>
 \end{list}
 
-\textbf{This information may be released to:} \underline{<< release_to >>}\\
-[Print Name(s) of Individual(s) To Whom University May Disclose Information]
+\textbf{This information may be released to:} \underline{\textbf{<<release_to>>}}\\
+\textbf{Print Name(s) of Individual(s) To Whom University May Disclose Information}
 
-\underline{<< additional_individuals >>} for the purpose of informing:\\
-[List Additional Individuals if Necessary]
+\underline{\textbf{<<additional_individuals>>}} \textbf{for the purpose of informing:}\\
+\textbf{List Additional Individuals if Necessary}
 
 \textbf{(Please check the box or boxes that apply):}
 \begin{list}{}{\leftmargin=0pt \itemindent=0pt \setlength{\itemsep}{0pt}}
-    << purposes >>
+    <<purposes>>
 \end{list}
 
-\textbf{Please provide a password to obtain information via the phone:} \underline{<< password >>}\\
-\footnotesize (Password should not contain more than ten (10) letters. The University will not release information to the caller if they do not have the password. A new form must be completed to change your password.)
+\textbf{Please provide a password to obtain information via the phone:} \underline{\textbf{<<password>>}}\\
+\footnotesize (Password should not contain more than ten (10) letters...)
 
 \vspace{0.3cm}
-\textbf{This is to attest that I am the student signing this form.} I understand the information may be released orally or in the form of copies of written records, as preferred by the requester. This authorization will remain in effect from the date it is executed until revoked by me, in writing, and delivered to Department(s) identified above.
+\textbf{This is to attest that I am the student signing this form...}
 
 \vspace{0.6cm}
-\underline{<< peoplesoft_id >>}\\
+\underline{\textbf{<<peoplesoft_id>>}}\\
 PeopleSoft I.D. Number
 
 \vspace{0.3cm}
-\underline{<< student_name >>} \hspace{0.5cm} \underline{<< signature >>}\\
+\underline{\textbf{<<student_name>>}} \hspace{0.5cm}
+\includegraphics[height=1.5cm]{<<signature_path>>}\\
 Student Name [please print] \hspace{2cm} Student Signature
 
 \vspace{0.6cm}
