Working LaTeX Generation
but I need to fix ferpa template

--- a/admin_panel/latex_templates/texas_residency_template.tex
+++ b/admin_panel/latex_templates/texas_residency_template.tex
@@ -47,7 +47,7 @@ In witness whereof, this \underline{\textbf{<< day >>}} day of
 
 \vspace{1em}
 
-Signature: \underline{\textbf{<< signature >>}} \\
+Signature: \includegraphics[height=1.5cm]{<<signature_path>>}\\
 Student ID Number: \underline{\textbf{<< student_id >>}} \\
 Student Date of Birth: \underline{\textbf{<< dob >>}}
 
